Made test changes to index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav id="nav" class="bg-[#1f1f1f] h-[60px] flex justify-between px-28  items-center text-white">
             <h1 class="font-bold text-[25px]">Waves</h1>
             <ul class="flex gap-x-36">
-              <li class="text-[20px]"><a href="#">Home</a></li>
+              <li class="text-[20px]"><a href="#">milf</a></li>
                <li class="text-[20px]"><a href="#">About</a></li>
                 <li class="text-[20px]"><a href="#">Join</a></li>
             </ul>
